--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    background: #ece9e6;
+    background: #faf8f8;
     background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
-    background: linear-gradient(to right, #ffffff, #ece9e6);
+    background: linear-gradient(to right, #f77263, #f1cd53);
     display: flex;
     align-items: center;
     justify-content: center;
